@@ -20,3 +20,6 @@ iptables_log_limit = 50
 
 # Burst 
 iptables_log_burst = 10
+
+# Enable source NAT, if your router does NAT you can disable it
+nat_enabled = yes
